@@ -65,6 +65,7 @@ Unreleased Version 2.3.0-pre
  * Feature: Add shortcuts to change brush opacity and hardness. Thanks justanotatest for suggesting.
  * Feature: Allow defining a separate pressure curve for the stylus eraser tip in the tablet preferences. Thanks CosmosX007 for suggesting.
  * Feature: Allow turning off system file dialogs on Windows, in case they somehow cause trouble. Thanks CrustStuff for suggesting.
+ * Fix: Remember loops field in animation export dialog during a single run, instead of resetting it to 1 every time.
 
 Unreleased Version 2.2.3-pre
  * Fix: Disable audio playback under 32 bit Windows, since it just crashes.
